# GLimpSW

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/models/Sponza/: Sponza_LowPoly.gltf
src/: .clang-format  DebugDisplay.natvis
src/SwRast/: CMakeLists.txt  Camera.h  Clipper.cpp  ImageHelpers.cpp  Main.cpp  Misc.h  Model.cpp  Model.h  Playground.h  ProfilerStats.h  QuickGL.h  Rasterizer.cpp  Rasterizer.h  RendererShaders.h  SIMD.h  Scene.cpp  Scene.h  Shading.cpp  Shading.h  SwRast.h  Texture.h  Texture2D.cpp  VertexReader.cpp  vcpkg.json
src/SwRast/Benchmarks/: CoarseRaster.cpp  GatherSmall.cpp  GatherThroughput.cpp  RasterBench.cpp  TexGather64.cpp  TexSwizzle.cpp
